--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h4>大杉 祐弥</h4>
         <p>新潟出身エンジニア</p>
         <p>NC旋盤のオペレーターとして3D CADやCAMを使いプログラム作成に携わっています。</p>
-        <p>その後、アプリ開発に惹かれオンライン学習サイトで学びました。</p>
+        <p>CAMなどを使っていくうちに、アプリ開発に興味を持ち、オンライン学習サイトで学習を始めました。</p>
         <p>現在は、副業としてプログラミングの業務を行なっています。</p>
         <p>何かありましたらTwitterのDMからご連絡をください。</p>
         <nav>
@@ -72,8 +72,9 @@
         <img src="img/work1.png" alt="アプリの画像" class="app-img">
         <div class="content">
           <h4><a href="">ポートフォリオサイト</a></h4>
-          <p>アプリの説明。アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明アプリの説明</p>
-          <a href="https://github.com/riu-414">
+          <p>このWebページです。</p>
+          <p>HTMLとCSSを使用しました。</p>
+          <a href="https://github.com/riu-414/riu-414.github.io">
             <i class="bi bi-github"></i> Git Hub
           </a>
         </div>
