--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
       <div class="Career">
         <h4>大杉 祐弥</h4>
         <p>新潟出身エンジニア</p>
-        <p>NC旋盤のオペレーターとして3D CADやCAMを使いプログラム作成に携わっています。</p>
-        <p>CAMなどを使っていくうちに、アプリ開発に興味を持ち、オンライン学習サイトで学習を始めました。</p>
-        <p>現在は、副業としてプログラミングの業務を行なっています。</p>
+        <p>納期を守ることはもちろん、丁寧なコミュニケーションを心がけております。
+          ご連絡いただければ、すぐに対応できる態勢を整えておりますので、どうぞよろしくお願いします。</p>
         <p>何かありましたらTwitterのDMからご連絡をください。</p>
         <nav>
           <ul>
